noinst_LTLIBRARIES = libaddressings.la
libaddressings_la_SOURCES = dpaddr.m lsaddr.m lscaddr.m lsmaddr.m mlsaddr.m dpaddr1.m dpaddr2.m dpaddr3.m dpaddr4.m dpaddr5.m dpaddr6.m dpaddr7.m dpaddr8.m dpaddr9.m dpaddr10.m dpaddr11.m lscaddr1.m lscaddr2.m lscaddr3.m lscaddr4.m lsmaddr1.m lsmaddr2.m lsmaddr3.m lsmaddr4.m mlsaddr1.m mlsaddr2.m mlsaddr3.m mlsaddr4.m mlsaddr5.m mlsaddr6.m lsaddr1.m lsaddr2.m lsaddr3.m lsaddr4.m lsaddr5.m lsaddr6.m lsaddr7.m lsaddr8.m lsaddr9.m
OBJCFLAGS = -fconstant-string-class=ChConstantString -lchiles -O2 -Werror -larmyc -I@top_srcdir@/include
