noinst_LTLIBRARIES = libinstructions.la
libinstructions_la_SOURCES = adc.m add.m and.m bic.m bkpt.m bl.m blx.m bx.m cdp.m clz.m cmn.m cmp.m cps.m eor.m ldc.m ldm1.m ldm2.m ldm3.m ldrb.m ldrbt.m ldr.m ldrd.m ldrex.m ldrh.m ldrsb.m ldrsh.m ldrt.m mcr.m mcrr.m mla.m mov.m mrc.m mrrc.m mrs.m msri.m msrr.m mul.m mvn.m orr.m rsb.m rsc.m sbc.m setend.m smla.m smlad.m smlal.m smlald.m smlalxy.m smlaw.m smlsd.m smlsld.m smmla.m smmls.m smmul.m smuad.m smul.m smull.m smulw.m smusd.m stc.m stm1.m stm2.m strb.m strbt.m str.m strd.m strex.m strh.m strt.m sub.m swi.m swpb.m swp.m sxtab16.m sxtab.m sxtah.m sxtb16.m sxtb.m sxth.m teq.m tst.m umaal.m umlal.m umull.m uxtab16.m uxtab.m uxtah.m uxtb16.m uxtb.m uxth.m dp.m ls.m mls.m lsm.m lsc.m
OBJCFLAGS = -fconstant-string-class=ChConstantString -lchiles -O2 -Werror -larmyc -I@top_srcdir@/include
